# cookiecutter-pytask-plugin

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGES.md  CHANGES.rst  LICENSE  MANIFEST.in  README.md  README.rst  TODO.rst  codecov.yml  cookiecutter.json  environment.yml  justfile  pyproject.toml  setup.cfg  tox.ini
.conda/: meta.yaml
.github/workflows/: main.yml
docs/: rtd_environment.yml
docs/source/: conf.py  index.md
hooks/: post_gen_project.py  pre_gen_project.py
src/pytask_xxxxx/: collect.py
tests/: __init__.py  test_cookie.py
{{cookiecutter.package_name}}/: .gitignore  .pre-commit-config.yaml  CHANGES.md  CHANGES.rst  LICENSE  MANIFEST.in  README.md  README.rst  codecov.yml  environment.yml  justfile  pyproject.toml  setup.cfg  tox.ini
{{cookiecutter.package_name}}/.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
{{cookiecutter.package_name}}/.github/workflows/: main.yml  publish-to-pypi.yml
{{cookiecutter.package_name}}/src/{{cookiecutter.__package_name}}/: __init__.py  collect.py  config.py  execute.py  parametrize.py  plugin.py
{{cookiecutter.package_name}}/tests/: conftest.py  test_collect.py  test_config.py  test_execute.py  test_import.py  test_parallel.py  test_parametrize.py
{{cookiecutter.project_slug}}/: .gitignore  CHANGES.rst  README.rst  codecov.yml  environment.yml  setup.cfg
{{cookiecutter.project_slug}}/tests/: test_execute.py
