[metadata]
name = cookiecutter_pytask_plugin
description = A minimal template for plugins for pytask.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://cookiecutter-pytask-plugin.readthedocs.io/en/latest
author = Tobias Raabe
author_email = raabe@posteo.de
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
project_urls =
    Changelog = https://cookiecutter-pytask-plugin.readthedocs.io/en/latest/changes.html
    Documentation = https://cookiecutter-pytask-plugin.readthedocs.io/en/latest
    Github = https://github.com/pytask-dev/cookiecutter-pytask-plugin
    Tracker = https://github.com/pytask-dev/cookiecutter-pytask-plugin/issues

[options]
python_requires = >=3.9
zip_safe = False
