[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"


[tool.setuptools_scm]
write_to = "src/{{ cookiecutter.__package_name }}/_version.py"

[dependency-groups]
docs = [
    "furo",
    "ipython",
    "myst-parser",
    "nbsphinx",
    "sphinx",
    "sphinx-click",
    "sphinx-copybutton",
    "sphinx-design>=0.3",
    "sphinx-toolbox",
    "sphinxext-opengraph",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "pytask-parallel>=0.2",
]
typing = ["mypy"]
lint = ["pre-commit"]


[tool.mypy]
files = ["src", "tests"]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true


[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
ignore_errors = true


[tool.pytask.ini_options]
paths = "./src/{{ cookiecutter.package_name }}"


[tool.ruff]
target-version = "py{{ cookiecutter.python_version | replace('.', '') }}"
select = ["ALL"]
fix = true
extend-ignore = [
    # Numpy docstyle
    "D107",
    "D203",
    "D212",
    "D213",
    "D402",
    "D413",
    "D415",
    "D416",
    "D417",
    # Others.
    "D404",  # Do not start module docstring with "This".
    "RET504",  # unnecessary variable assignment before return.
    "S101",  # raise errors for asserts.
    "B905",  # strict parameter for zip that was implemented in py310.
    "I",  # ignore isort
    "FBT",  # flake8-boolean-trap
    "EM",  # flake8-errmsg
    "ANN401",  # flake8-annotate typing.Any
    "PD",  # pandas-vet
    "COM812",  # trailing comma missing, but ruff format takes care of that
]


[tool.ruff.per-file-ignores]
"tests/*" = ["D", "ANN"]


[tool.ruff.pydocstyle]
convention = "numpy"


[tool.pytest.ini_options]
addopts = ["--doctest-modules"]
filterwarnings = [
    "ignore: the imp module is deprecated in favour of importlib",
    "ignore: Using or importing the ABCs from 'collections' instead of",
    "ignore: The (parser|symbol) module is deprecated and will be removed in future",
]
junit_family = "xunit2"
markers = [
    "wip: Tests that are work-in-progress.",
    "unit: Flag for unit tests which target mainly a single function.",
    "integration: Flag for integration tests which may comprise of multiple unit tests.",
    "end_to_end: Flag for tests that cover the whole program.",
]
norecursedirs = [".idea"]
