[metadata]
name = {{ cookiecutter.__package_name }}
description = {{ cookiecutter.package_description }}
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/pytask-dev/{{ cookiecutter.package_name }}
author = {{ cookiecutter.author }}
author_email = {{ cookiecutter.email }}
license = {{ cookiecutter.open_source_license }}
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: {{ cookiecutter.open_source_license }} License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Changelog = https://github.com/pytask-dev/{{ cookiecutter.package_name }}/blob/main/CHANGES.rst
    Documentation = https://github.com/pytask-dev/{{ cookiecutter.package_name }}
    Github = https://github.com/pytask-dev/{{ cookiecutter.package_name }}
    Tracker = https://github.com/pytask-dev/{{ cookiecutter.package_name }}/issues

[options]
packages = find:
install_requires =
    click
    pytask>=0.1.7
python_requires = >=3.7
include_package_data = True
package_dir = =src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
pytask =
    {{ cookiecutter.__package_name }} = {{ cookiecutter.__package_name }}.plugin

[check-manifest]
ignore =
    src/{{ cookiecutter.__package_name }}/_version.py
