[metadata]
name = {{ cookiecutter.project_name }}
description = {{ cookiecutter.project_description }}
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/pytask-dev/{{ cookiecutter.project_name }}
author = {{ cookiecutter.author }}
author_email = {{ cookiecutter.author_email }}
license = {{ cookiecutter.open_source_license }}
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: {{ cookiecutter.open_source_license }} License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Changelog = https://github.com/pytask-dev/{{ cookiecutter.project_name }}/blob/main/CHANGES.rst
    Documentation = https://github.com/pytask-dev/{{ cookiecutter.project_name }}
    Github = https://github.com/pytask-dev/{{ cookiecutter.project_name }}
    Tracker = https://github.com/pytask-dev/{{ cookiecutter.project_name }}/issues

[options]
packages = find:
install_requires =
    click
    pytask>=0.1
python_requires = >=3.7
include_package_data = True
package_dir = =src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
pytask =
    {{ cookiecutter.project_slug }} = {{ cookiecutter.project_slug }}.plugin

[check-manifest]
ignore =
    src/{{ cookiecutter.project_slug }}/_version.py
